<resources>
    <string name="app_name">FFA Agriculture</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="wsbridge_ip">WSBridge IP</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="channel_name">Upload Service Channel</string>
    <string name="channel_description">Notifications for upload service status</string>
    <string name="timestamp">Timestamp</string>
    <string name="message">Message</string>
    <string name="drone_disconnected">Drone Disconnected</string>
    <string name="drone_connected">Drone is Connected, Loading…</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create account</string>
    <string name="or">Or</string>
    <string name="please_log_into_your_account">Please log into your account</string>
    <string name="enter_your_email_address_to_reset_your_password">Enter your email address to reset your password</string>
    <string name="reset_password">Reset Password</string>

</resources>